# pot-app-translate-plugin-template

./: Cargo.toml  README.md  README_EN.md  build.sh  info.json  package.sh
.github/build-for-linux/: build.sh
.github/workflows/: build.yml
build-for-linux/: entrypoint.sh
package-plugin/: Dockerfile  action.yml  entrypoint.sh
src/: lib.rs
