[package]
name = "plugin"
version = "1.0.0"
authors = ["Pylogmon"]
edition = "2021"

[lib]
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.18",features = ["json"]}
tokio = {version = "1.32.0",features = ["macros"]}
serde = {version="1.0",features = ["derive"]}
serde_json = "1.0"
