[package]
name = "plugin"
version = "1.0.0"
authors = ["Pylogmon"]
edition = "2021"

[lib]
crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.18",features = ["blocking","json"]}
serde_json = "1.0"
